grammar/ArduScriptParser.py
# Generated from ArduScript.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ArduScriptParser ( Parser ):

    grammarFileName = "ArduScript.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'function'", "'('", "','", "')'", "'skip'", 
                     "'if'", "'while'", "'loop'", "'setPin'", "'togglePin'", 
                     "'wait'", "'print('", "'GLOBAL'", "'=='", "'high'", 
                     "'low'", "'%'", "'readPin'", "'begin'", "'end'", "':'", 
                     "'else'", "'true'", "'false'", "'and'", "'or'", "'not'", 
                     "<INVALID>", "<INVALID>", "'='", "'<'", "'<='", "'>'", 
                     "'>='", "'+'", "'-'", "'*'", "'/'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'\\t'", "<INVALID>", "'for'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "BEGIN", "END", 
                      "COLON", "ELSE", "TRUE", "FALSE", "AND", "OR", "NOT", 
                      "ID", "NUM", "EQ", "LT", "LE", "GT", "GE", "PLUS", 
                      "MINUS", "MULT", "DIV", "WS", "SL_COMMENT", "NEWLINE", 
                      "TAB", "StringLiteral", "FOR", "STRING" ]

    RULE_start = 0
    RULE_function = 1
    RULE_block = 2
    RULE_s = 3
    RULE_b = 4
    RULE_a = 5

    ruleNames =  [ "start", "function", "block", "s", "b", "a" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    BEGIN=19
    END=20
    COLON=21
    ELSE=22
    TRUE=23
    FALSE=24
    AND=25
    OR=26
    NOT=27
    ID=28
    NUM=29
    EQ=30
    LT=31
    LE=32
    GT=33
    GE=34
    PLUS=35
    MINUS=36
    MULT=37
    DIV=38
    WS=39
    SL_COMMENT=40
    NEWLINE=41
    TAB=42
    StringLiteral=43
    FOR=44
    STRING=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ArduScriptParser.RULE_start

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class EveryLineContext(StartContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduScriptParser.StartContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ArduScriptParser.NEWLINE)
            else:
                return self.getToken(ArduScriptParser.NEWLINE, i)
        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArduScriptParser.BlockContext)
            else:
                return self.getTypedRuleContext(ArduScriptParser.BlockContext,i)

        def s(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArduScriptParser.SContext)
            else:
                return self.getTypedRuleContext(ArduScriptParser.SContext,i)

        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArduScriptParser.FunctionContext)
            else:
                return self.getTypedRuleContext(ArduScriptParser.FunctionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEveryLine" ):
                listener.enterEveryLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEveryLine" ):
                listener.exitEveryLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEveryLine" ):
                return visitor.visitEveryLine(self)
            else:
                return visitor.visitChildren(self)



    def start(self):

        localctx = ArduScriptParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            localctx = ArduScriptParser.EveryLineContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 18
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2199292231650) != 0):
                self.state = 16
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [41]:
                    self.state = 12
                    self.match(ArduScriptParser.NEWLINE)
                    pass
                elif token in [19]:
                    self.state = 13
                    self.block()
                    pass
                elif token in [5, 6, 7, 8, 9, 10, 11, 12, 13, 28]:
                    self.state = 14
                    self.s()
                    pass
                elif token in [1]:
                    self.state = 15
                    self.function()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 20
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ArduScriptParser.ID)
            else:
                return self.getToken(ArduScriptParser.ID, i)

        def block(self):
            return self.getTypedRuleContext(ArduScriptParser.BlockContext,0)


        def getRuleIndex(self):
            return ArduScriptParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = ArduScriptParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self.match(ArduScriptParser.T__0)
            self.state = 22
            self.match(ArduScriptParser.ID)
            self.state = 23
            self.match(ArduScriptParser.T__1)
            self.state = 32
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==28:
                self.state = 24
                self.match(ArduScriptParser.ID)
                self.state = 29
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==3:
                    self.state = 25
                    self.match(ArduScriptParser.T__2)
                    self.state = 26
                    self.match(ArduScriptParser.ID)
                    self.state = 31
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 34
            self.match(ArduScriptParser.T__3)
            self.state = 35
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ArduScriptParser.RULE_block

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class CompoundContext(BlockContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduScriptParser.BlockContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BEGIN(self):
            return self.getToken(ArduScriptParser.BEGIN, 0)
        def start(self):
            return self.getTypedRuleContext(ArduScriptParser.StartContext,0)

        def END(self):
            return self.getToken(ArduScriptParser.END, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompound" ):
                listener.enterCompound(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompound" ):
                listener.exitCompound(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompound" ):
                return visitor.visitCompound(self)
            else:
                return visitor.visitChildren(self)



    def block(self):

        localctx = ArduScriptParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_block)
        try:
            localctx = ArduScriptParser.CompoundContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.match(ArduScriptParser.BEGIN)
            self.state = 38
            self.start()
            self.state = 39
            self.match(ArduScriptParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ArduScriptParser.RULE_s

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AssignmentContext(SContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduScriptParser.SContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(ArduScriptParser.ID, 0)
        def EQ(self):
            return self.getToken(ArduScriptParser.EQ, 0)
        def a(self):
            return self.getTypedRuleContext(ArduScriptParser.AContext,0)

        def b(self):
            return self.getTypedRuleContext(ArduScriptParser.BContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)


    class PrintContext(SContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduScriptParser.SContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(ArduScriptParser.STRING, 0)
        def a(self):
            return self.getTypedRuleContext(ArduScriptParser.AContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint" ):
                listener.enterPrint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint" ):
                listener.exitPrint(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint" ):
                return visitor.visitPrint(self)
            else:
                return visitor.visitChildren(self)


    class SetPinContext(SContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduScriptParser.SContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def a(self):
            return self.getTypedRuleContext(ArduScriptParser.AContext,0)

        def b(self):
            return self.getTypedRuleContext(ArduScriptParser.BContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetPin" ):
                listener.enterSetPin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetPin" ):
                listener.exitSetPin(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSetPin" ):
                return visitor.visitSetPin(self)
            else:
                return visitor.visitChildren(self)


    class SkipContext(SContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduScriptParser.SContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSkip" ):
                listener.enterSkip(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSkip" ):
                listener.exitSkip(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSkip" ):
                return visitor.visitSkip(self)
            else:
                return visitor.visitChildren(self)


    class ForContext(SContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduScriptParser.SContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def a(self):
            return self.getTypedRuleContext(ArduScriptParser.AContext,0)

        def block(self):
            return self.getTypedRuleContext(ArduScriptParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor" ):
                listener.enterFor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor" ):
                listener.exitFor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor" ):
                return visitor.visitFor(self)
            else:
                return visitor.visitChildren(self)


    class WhileContext(SContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduScriptParser.SContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def b(self):
            return self.getTypedRuleContext(ArduScriptParser.BContext,0)

        def block(self):
            return self.getTypedRuleContext(ArduScriptParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile" ):
                listener.enterWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile" ):
                listener.exitWhile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile" ):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)


    class WaitContext(SContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduScriptParser.SContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def a(self):
            return self.getTypedRuleContext(ArduScriptParser.AContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWait" ):
                listener.enterWait(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWait" ):
                listener.exitWait(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWait" ):
                return visitor.visitWait(self)
            else:
                return visitor.visitChildren(self)


    class CallFunctionContext(SContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduScriptParser.SContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ArduScriptParser.ID)
            else:
                return self.getToken(ArduScriptParser.ID, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCallFunction" ):
                listener.enterCallFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCallFunction" ):
                listener.exitCallFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCallFunction" ):
                return visitor.visitCallFunction(self)
            else:
                return visitor.visitChildren(self)


    class IfContext(SContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduScriptParser.SContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def b(self):
            return self.getTypedRuleContext(ArduScriptParser.BContext,0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArduScriptParser.BlockContext)
            else:
                return self.getTypedRuleContext(ArduScriptParser.BlockContext,i)

        def ELSE(self):
            return self.getToken(ArduScriptParser.ELSE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf" ):
                listener.enterIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf" ):
                listener.exitIf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf" ):
                return visitor.visitIf(self)
            else:
                return visitor.visitChildren(self)


    class TogglePinContext(SContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduScriptParser.SContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def a(self):
            return self.getTypedRuleContext(ArduScriptParser.AContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTogglePin" ):
                listener.enterTogglePin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTogglePin" ):
                listener.exitTogglePin(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTogglePin" ):
                return visitor.visitTogglePin(self)
            else:
                return visitor.visitChildren(self)


    class GlobalContext(SContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduScriptParser.SContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(ArduScriptParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobal" ):
                listener.enterGlobal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobal" ):
                listener.exitGlobal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobal" ):
                return visitor.visitGlobal(self)
            else:
                return visitor.visitChildren(self)



    def s(self):

        localctx = ArduScriptParser.SContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_s)
        self._la = 0 # Token type
        try:
            self.state = 93
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                localctx = ArduScriptParser.AssignmentContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 41
                self.match(ArduScriptParser.ID)
                self.state = 42
                self.match(ArduScriptParser.EQ)
                self.state = 45
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 43
                    self.a(0)
                    pass

                elif la_ == 2:
                    self.state = 44
                    self.b(0)
                    pass


                pass

            elif la_ == 2:
                localctx = ArduScriptParser.SkipContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.match(ArduScriptParser.T__4)
                pass

            elif la_ == 3:
                localctx = ArduScriptParser.IfContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 48
                self.match(ArduScriptParser.T__5)
                self.state = 49
                self.b(0)
                self.state = 50
                self.block()
                self.state = 53
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==22:
                    self.state = 51
                    self.match(ArduScriptParser.ELSE)
                    self.state = 52
                    self.block()


                pass

            elif la_ == 4:
                localctx = ArduScriptParser.WhileContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 55
                self.match(ArduScriptParser.T__6)
                self.state = 56
                self.b(0)
                self.state = 57
                self.block()
                pass

            elif la_ == 5:
                localctx = ArduScriptParser.ForContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 59
                self.match(ArduScriptParser.T__7)
                self.state = 60
                self.a(0)
                self.state = 61
                self.block()
                pass

            elif la_ == 6:
                localctx = ArduScriptParser.SetPinContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 63
                self.match(ArduScriptParser.T__8)
                self.state = 64
                self.a(0)
                self.state = 65
                self.match(ArduScriptParser.T__2)
                self.state = 66
                self.b(0)
                pass

            elif la_ == 7:
                localctx = ArduScriptParser.TogglePinContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 68
                self.match(ArduScriptParser.T__9)
                self.state = 69
                self.a(0)
                pass

            elif la_ == 8:
                localctx = ArduScriptParser.WaitContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 70
                self.match(ArduScriptParser.T__10)
                self.state = 71
                self.a(0)
                pass

            elif la_ == 9:
                localctx = ArduScriptParser.PrintContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 72
                self.match(ArduScriptParser.T__11)
                self.state = 75
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [45]:
                    self.state = 73
                    self.match(ArduScriptParser.STRING)
                    pass
                elif token in [2, 18, 28, 29]:
                    self.state = 74
                    self.a(0)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 77
                self.match(ArduScriptParser.T__3)
                pass

            elif la_ == 10:
                localctx = ArduScriptParser.CallFunctionContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 78
                self.match(ArduScriptParser.ID)
                self.state = 79
                self.match(ArduScriptParser.T__1)
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==28:
                    self.state = 80
                    self.match(ArduScriptParser.ID)
                    self.state = 85
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==3:
                        self.state = 81
                        self.match(ArduScriptParser.T__2)
                        self.state = 82
                        self.match(ArduScriptParser.ID)
                        self.state = 87
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)



                self.state = 90
                self.match(ArduScriptParser.T__3)
                pass

            elif la_ == 11:
                localctx = ArduScriptParser.GlobalContext(self, localctx)
                self.enterOuterAlt(localctx, 11)
                self.state = 91
                self.match(ArduScriptParser.T__12)
                self.state = 92
                self.match(ArduScriptParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ArduScriptParser.RULE_b

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class HighContext(BContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduScriptParser.BContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHigh" ):
                listener.enterHigh(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHigh" ):
                listener.exitHigh(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHigh" ):
                return visitor.visitHigh(self)
            else:
                return visitor.visitChildren(self)


    class NotContext(BContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduScriptParser.BContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(ArduScriptParser.NOT, 0)
        def b(self):
            return self.getTypedRuleContext(ArduScriptParser.BContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNot" ):
                listener.enterNot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNot" ):
                listener.exitNot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNot" ):
                return visitor.visitNot(self)
            else:
                return visitor.visitChildren(self)


    class ROpContext(BContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduScriptParser.BContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def a(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArduScriptParser.AContext)
            else:
                return self.getTypedRuleContext(ArduScriptParser.AContext,i)

        def LT(self):
            return self.getToken(ArduScriptParser.LT, 0)
        def LE(self):
            return self.getToken(ArduScriptParser.LE, 0)
        def GT(self):
            return self.getToken(ArduScriptParser.GT, 0)
        def GE(self):
            return self.getToken(ArduScriptParser.GE, 0)
        def b(self):
            return self.getTypedRuleContext(ArduScriptParser.BContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterROp" ):
                listener.enterROp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitROp" ):
                listener.exitROp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitROp" ):
                return visitor.visitROp(self)
            else:
                return visitor.visitChildren(self)


    class OrContext(BContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduScriptParser.BContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def b(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArduScriptParser.BContext)
            else:
                return self.getTypedRuleContext(ArduScriptParser.BContext,i)

        def OR(self):
            return self.getToken(ArduScriptParser.OR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOr" ):
                listener.enterOr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOr" ):
                listener.exitOr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOr" ):
                return visitor.visitOr(self)
            else:
                return visitor.visitChildren(self)


    class LowContext(BContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduScriptParser.BContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLow" ):
                listener.enterLow(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLow" ):
                listener.exitLow(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLow" ):
                return visitor.visitLow(self)
            else:
                return visitor.visitChildren(self)


    class AndContext(BContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduScriptParser.BContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def b(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ArduScriptParser.BContext)
            else:
                return self.getTypedRuleContext(ArduScriptParser.BContext,i)

        def AND(self):
            return self.getToken(ArduScriptParser.AND, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnd" ):
                listener.enterAnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnd" ):
                listener.exitAnd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAnd" ):
                return visitor.visitAnd(self)
            else:
                return visitor.visitChildren(self)


    class TrueContext(BContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduScriptParser.BContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TRUE(self):
            return self.getToken(ArduScriptParser.TRUE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTrue" ):
                listener.enterTrue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTrue" ):
                listener.exitTrue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTrue" ):
                return visitor.visitTrue(self)
            else:
                return visitor.visitChildren(self)


    class FalseContext(BContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduScriptParser.BContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FALSE(self):
            return self.getToken(ArduScriptParser.FALSE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFalse" ):
                listener.enterFalse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFalse" ):
                listener.exitFalse(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFalse" ):
                return visitor.visitFalse(self)
            else:
                return visitor.visitChildren(self)


    class BParenContext(BContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a ArduScriptParser.BContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def b(self):
            return self.getTypedRuleContext(ArduScriptParser.BContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBParen" ):
                listener.enterBParen(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBParen" ):
                listener.exitBParen(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBParen" ):
                return visitor.visitBParen(self)
            else:
                return visitor.visitChildren(self)



    def b(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ArduScriptParser.BContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_b, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                localctx = ArduScriptParser.TrueContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 96
                self.match(ArduScriptParser.TRUE)
                pass
